<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM for Shared-TiPi -->
	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.vd.shared</groupId>
	<artifactId>shared-tipi-base</artifactId>
	<packaging>pom</packaging>
	<!-- BEGIN_LVERSION -->
	<version>1.0.2-SNAPSHOT</version>
	<!-- END_LVERSION -->

	<name>Shared - TiPi Base</name>
	<description>DSI - Shared TiPi</description>

	<modules>
		<module>engine</module>
		<module>query</module>
		<module>web</module>
	</modules>

	<scm>
		<developerConnection>scm:git:git@bitbucket.etat-de-vaud.ch::/shared/shared-tipi.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<profiles>
		<profile>
			<id>not</id><!-- NOTests -->
			<properties>
				<skipTests>true</skipTests>
			</properties>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jms</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>3.0.0</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>ch.vd.shared</groupId>
			<artifactId>shared-hibernate</artifactId>
			<version>${shared-hibernate.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.5.0-M1</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.1.0-jre</version>
		</dependency>
		<dependency>
			<groupId>ch.vd.shared</groupId>
			<artifactId>shared-quartz-client</artifactId>
			<version>6.0.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-web</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<dependency>
			<groupId>jakarta.transaction</groupId>
			<artifactId>jakarta.transaction-api</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>3.1.0</version>
		</dependency>


		<!-- Deps de testing -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.12.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.atomikos</groupId>
			<artifactId>transactions-jta</artifactId>
			<version>${atomikos.version}</version>
			<classifier>jakarta</classifier>
		</dependency>
		<dependency>
			<groupId>org.tranql</groupId>
			<artifactId>tranql-connector-oracle-common</artifactId>
			<version>1.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.tranql</groupId>
			<artifactId>tranql-connector</artifactId>
			<version>1.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.tranql</groupId>
			<artifactId>tranql-connector-postgresql-common</artifactId>
			<version>${tranql-postgresql.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>oracle.jdbc</groupId>
			<artifactId>ojdbc7</artifactId>
			<version>${oracle.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql-jdbc4</artifactId>
			<version>${postgresql.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.vd.shared</groupId>
			<artifactId>shared-testing</artifactId>
			<version>${shared-testing.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<!-- implémentation log4j2 pour slf4j -->
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<release>17</release>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>verify</phase>
					</execution>
					<execution>
						<id>attach-test-sources</id>
						<goals>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<goals>clean deploy</goals>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<arguments>-Dmaven.javadoc.skip=true</arguments>
					<pushChanges>true</pushChanges>
					<localCheckout>true</localCheckout>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>nexus-dgnsi-server</id>
			<name>Nexus DGNSI</name>
			<url>${nexus.url.stable}</url>
		</repository>
		<snapshotRepository>
			<id>nexus-dgnsi-server</id>
			<name>Nexus DGNSI</name>
			<url>${nexus.url.snapshots}</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>

	<properties>

		<reflections.version>0.9.5</reflections.version>

		<!-- Parametres de testing -->
		<surefire.useFile>false</surefire.useFile>
		<surefire.argline>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=512m</surefire.argline>

		<shared-hibernate.version>9.0.0</shared-hibernate.version>
		<shared-testing.version>9.0.0</shared-testing.version>

		<commons-lang3.version>3.10</commons-lang3.version>
		<log4j.version>2.17.1</log4j.version>

		<spring.version>6.1.2</spring.version>
		<spring.security.version>6.1.2</spring.security.version>
		<activemq.version>5.5.1-fuse-07-11</activemq.version>
		<hibernate.version>6.1.2.Final</hibernate.version>
		<tranql-postgresql.version>1.4</tranql-postgresql.version>
		<oracle.version>12.1.0.2.0</oracle.version>
		<postgresql.version>9.1-901</postgresql.version>

		<atomikos.version>6.0.109</atomikos.version>
	</properties>

</project>
